# DevOps-Course-Starter

./: .dockerignore  .env,test  .gitignore  .travis.yml  Dockerfile  README.md  Vagrantfile  app.py  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  run_dev.bat  run_dev.sh  tests.sh  wsgi.py
Items/: item.py
Models/: item.py  view_model.py
charts/: deployment.yaml
config/: settings.py
documentation/: Component.drawio  Container.drawio  context.drawio
e2e_tests/: e2e_test.py
infrastructure/:  variables.tf  .terraform.lock.hcl  app-service.tf  database.tf  main.tf  output.tf
infrastructure/scripts/: azure_storage_setup.sh
integration-tests/: test_app.py
integration_tests/: conftest.py  test_app.py
templates/: index.html
tests/: e2e_test.sh  tests.sh
tests/Models/: test_view_model.py
todo_app/: .env.template  .env.test  app.py
todo_app/github/: github_authentication.py
todo_app/models/: item.py  view_model.py
todo_app/mongo/: mongo_wrapper.py
todo_app/templates/: index.html
todo_app/trello/: trello_api.py
todo_app/user/: user.py
travis/: build_and_tag_production.sh  deploy_to_azure.sh  deploy_to_docker.sh  deploy_to_heroku.sh
trello/: helpers.py  trello_api.py
